--- a/delivery-auth-server.yml
+++ b/delivery-auth-server.yml
@@ -30,11 +30,11 @@ spring:
         password: 'root'
         platform: mysql
         schema: classpath:/sql/schema.sql
-        url: jdbc:mysql://localhost:3036/oauth?allowPublicKeyRetrieval=true&verifyServerCertificate=false&useSSL=false&requireSSL=false
+        url: jdbc:mysql://localhost/oauth?allowPublicKeyRetrieval=true&verifyServerCertificate=false&useSSL=false&requireSSL=false
         username: root
     jpa:
         database-platform: org.hibernate.dialect.MySQLDialect
         generate-ddl: true
         hibernate:
-            ddl-auto: update
+            ddl-auto: create
         show-sql: true
