--- a/delivery-auth-server.yml
+++ b/delivery-auth-server.yml
@@ -30,7 +30,7 @@ spring:
         password: 'root'
         platform: mysql
         schema: classpath:/sql/schema.sql
-        url: jdbc:mysql://localhost:3306/oauth?allowPublicKeyRetrieval=true&verifyServerCertificate=false&useSSL=false&requireSSL=false
+        url: jdbc:mysql://localhost:3306/oauth?allowPublicKeyRetrieval=true&verifyServerCertificate=false&useSSL=false&requireSSL=false&serverTimezone=UTC
         username: root
     jpa:
         database-platform: org.hibernate.dialect.MySQLDialect
