--- a/delivery-payments-service.yml
+++ b/delivery-payments-service.yml
@@ -16,15 +16,15 @@ eureka:
 spring:
     datasource:
         driver-class-name: com.mysql.jdbc.Driver
-        password: '1234'
+        password: 'root'
         platform: mysql
-        url: jdbc:mysql://localhost/delivery-order?verifyServerCertificate=false&useSSL=false&requireSSL=false
+        url: jdbc:mysql://localhost:3306/oauth?allowPublicKeyRetrieval=true&verifyServerCertificate=false&useSSL=false&requireSSL=false&serverTimezone=UTC
         username: root
     jpa:
         database-platform: org.hibernate.dialect.MySQLDialect
-        generate-ddl: false
+        generate-ddl: true
         hibernate:
-            ddl-auto: create
+            ddl-auto: update
         show-sql: true
 
 authserver:
