--- a/delivery-payments-service.yml
+++ b/delivery-payments-service.yml
@@ -18,7 +18,7 @@ spring:
         driver-class-name: com.mysql.jdbc.Driver
         password: 'root'
         platform: mysql
-        url: jdbc:mysql://localhost:3306/oauth?allowPublicKeyRetrieval=true&verifyServerCertificate=false&useSSL=false&requireSSL=false&serverTimezone=UTC
+        url: jdbc:mysql://localhost:3306/delivery-order?allowPublicKeyRetrieval=true&verifyServerCertificate=false&useSSL=false&requireSSL=false&serverTimezone=UTC
         username: root
     jpa:
         database-platform: org.hibernate.dialect.MySQLDialect
