--- a/delivery-payments-service.yml
+++ b/delivery-payments-service.yml
@@ -24,7 +24,7 @@ spring:
         database-platform: org.hibernate.dialect.MySQLDialect
         generate-ddl: true
         hibernate:
-            ddl-auto: update
+            ddl-auto: create
         show-sql: true
 
 authserver:
