--- a/delivery-payments-service.yml
+++ b/delivery-payments-service.yml
@@ -21,7 +21,7 @@ spring:
         url: jdbc:mysql://localhost:3306/delivery-order?allowPublicKeyRetrieval=true&verifyServerCertificate=false&useSSL=false&requireSSL=false&serverTimezone=UTC
         username: root
     jpa:
-        database-platform: org.hibernate.dialect.MySQL5Dialect
+        database-platform: org.hibernate.dialect.MySQLDialect
         generate-ddl: true
         hibernate:
             ddl-auto: create
